# CMSI638_StockTracker

./: Alphadesq.html  README.md  adk_agent.py  googl_layer3_fixed.py  main.py  pyproject.toml  web_server.py
models/: googl_layer3_features.pkl  googl_layer3_gradboost.pkl  googl_layer3_metadata.json  googl_layer3_rf.pkl  googl_layer3_scaler.pkl
